<resources>
    <string name="app_name">AppHotel</string>
    <string name="action_settings">settings</string>
    <string name="app_hotel">Hotel App</string>
    <string name="staff">Staff</string>
    <string name="layout_sala">Room Layout</string>
    <string name="eventos">Events</string>
    <string name="adicionar_evento">Add Event</string>
    <string name="Error_Message">Invalid Section</string>
    <string name="guardar">Save</string>
    <string name="observacoes">Observations</string>
    <string name="cancel">Cancel</string>
    <string name="responsavel">Encharged</string>
    <string name="contacto">Contact</string>
    <string name="n_pessoas">Nº Persons</string>
    <string name="data_dd_mm_aaaa">Date(DD-MM-YYYY)</string>
    <string name="nome_do_evento">"Event "</string>
    <string name="name">Name</string>
    <string name="N_persons">Nº Persons</string>
    <string name="date">Date</string>
    <string name="encharged">Encharged</string>
    <string name="contact">Contact</string>
    <string name="observations">Observations</string>
    <string name="todo">TODO</string>
    <string name="CancelOPP">Operation canceled</string>
    <string name="ToastSave">Saved with Success</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel_edit">Cancel Edit</string>
    <string name="SavedChanged">Changes Saved</string>
    <string name="ActionCanceled">Action Canceled</string>
    <string name="nib">NIB</string>
    <string name="social_security">Social Security</string>
    <string name="add_staff">ADD Staff</string>
    <string name="image">Image</string>
    <string name="layouts">Layouts</string>
    <string name="add_layout">Add Layout</string>
    <string name="layout_info">Layout Info +</string>
    <string name="alergies">Alergies</string>
    <string name="vegetarians">Vegetarians</string>
    <string name="vegan">Vegan</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
</resources>
